<resources>
    <string name="account">帐号</string>
    <string name="account_type">com.market2345.account</string>
    <string name="ad">有广告</string>
    <string name="alert">提示</string>
    <string name="all_app_is_new_version">所有应用都是最新的</string>
    <string name="all_comments">全部评论&lt;br/>(%d)</string>
    <string name="already_select">已经选中了</string>
    <string name="apk_break">[破损]</string>
    <string name="apk_file">APK文件</string>
    <string name="apk_installed">[已安装]</string>
    <string name="apk_new_download1">&lt;font color=#00a0ea>[新下载]&lt;/font> %1$s</string>
    <string name="apk_not_installed">[未安装]</string>
    <string name="app_name">2345手机助手</string>
    <string name="app_name_new_logo">手机助手</string>
    <string name="app_name_wang">2345王牌手机助手</string>
    <string name="app_rank">软件周榜</string>
    <string name="appstore_download">下载</string>
    <string name="appstore_manager">管理</string>
    <string name="authority">com.market2345.</string>
    <string name="bt_stop">停止</string>
    <string name="btn_junk_clean">清理垃圾</string>
    <string name="cache">缓存</string>
    <string name="cache_clear_activity_title">缓存清理</string>
    <string name="cache_clear_dialog_info">将会跳转到应用信息界面，请点击“清理缓存”进行清理。</string>
    <string name="cache_clear_list_size_pre">大小：</string>
    <string name="cancle_ignore">取消忽略</string>
    <string name="category_all">所有</string>
    <string name="category_apk">安装包</string>
    <string name="category_document">文档</string>
    <string name="category_music">音乐</string>
    <string name="category_other">其它</string>
    <string name="category_other_pic">其它图片</string>
    <string name="category_picture">图片</string>
    <string name="category_theme">主题</string>
    <string name="category_video">视频</string>
    <string name="category_zip">压缩包</string>
    <string name="check">选中</string>
    <string name="check_app_signatures_install">您原有的【%1$s】与新版本签名不一致，需要卸载后才能安装。一旦卸载，应用保存在本地的数据将会丢失，请谨慎操作。</string>
    <string name="check_app_signatures_update">您原有的【%1$s】与新版本签名不一致，需要卸载后才能安装。是否继续升级？</string>
    <string name="check_sdk_version">您的安卓系统版本&lt;font color=#00a0e9>(%1$s)&lt;/font>低于应用的最低要求&lt;font color=#00a0e9>(%2$s)&lt;/font>，无法正常使用。是否继续下载？</string>
    <string name="checkcodesent">验证码已发送</string>
    <string name="classfy_all">全部</string>
    <string name="classifyspecial_typegame">game</string>
    <string name="classifyspecial_typehot">hot</string>
    <string name="classifyspecial_typesoft">soft</string>
    <string name="classifyspecial_typetitle">title</string>
    <string name="classifyspecialtitle_game">游戏</string>
    <string name="classifyspecialtitle_soft">软件</string>
    <string name="clean_alert_size">提醒大小</string>
    <string name="clean_alert_time">时间间隔提醒</string>
    <string name="clean_database_upgrade_set">WIFI网络自动下载和更新清理库</string>
    <string name="clean_find_size">发现&lt;font color=#ff0000>%1$s &lt;/font> 垃圾</string>
    <string name="clean_size_set">"每隔&lt;font color='#ff683a'>%1$s MB&lt;/font> 时在通知的栏提醒我"</string>
    <string name="clean_success_size">成功清理%1$s垃圾</string>
    <string name="clean_suggest_default">不含重要文件，清理后不影响使用</string>
    <string name="clean_time_set">"每隔&lt;font color='#f57149'>%1$s&lt;/font>天"</string>
    <string name="clear">清理</string>
    <string name="clear_apk_clear_activity_button_clear">一键清理</string>
    <string name="clear_apk_clear_dialog_content_checkbox_nevertip">不再提示</string>
    <string name="clear_big_file">大文件</string>
    <string name="clear_cache_clear_list_item_systemrubbish">系统残留垃圾</string>
    <string name="clear_cache_clear_list_item_zhushou">手机助手</string>
    <string name="clear_residu_header_unknow">未知</string>
    <string name="clear_residual_header_emptyfile">空文件夹</string>
    <string name="clear_residual_header_logfile">日志文件</string>
    <string name="clear_residual_header_text_imgfile">缩略图文件</string>
    <string name="clear_select_none">未选中任何项</string>
    <string name="clear_succsess_tip">成功清理卸载残留文件</string>
    <string name="clear_uninstall_tip">"刚卸载的&lt;font color='#3097fd'>%1$s&lt;/font>有&lt;font color='#3097fd'>%2$s&lt;/font>残留文件，是否清理"</string>
    <string name="clicktosignin">点击登录</string>
    <string name="comment">评论</string>
    <string name="comment_failure">评论失败，请稍后重试</string>
    <string name="comment_success">评论成功</string>
    <string name="confirm">确定</string>
    <string name="conn_pc">连接电脑</string>
    <string name="conn_scan_qr">扫描二维码</string>
    <string name="conn_way_1">方法一:USB数据线连接</string>
    <string name="conn_way_2">方法二:无线连接</string>
    <string name="contain_number_file"><u>包含%1$s个文件</u></string>
    <string name="copyright">版权所有</string>
    <string name="delete_desk_ball">手机桌面不显示2345加速球？</string>
    <string name="delete_desk_search">手机桌面不显示应用搜索的快捷方式？</string>
    <string name="deleting">正在删除:</string>
    <string name="detail">详情</string>
    <string name="detail_download">下载</string>
    <string name="detail_network_abnormal">网络异常,请稍后再试</string>
    <string name="detail_open">打开</string>
    <string name="detail_size">%1$s</string>
    <string name="detail_update">升级</string>
    <string name="devices_just_optim_already_best">手机刚刚加速过，已是最佳状态</string>
    <string name="dialog_gift_get_copy_success">复制成功</string>
    <string name="dialog_gift_get_done">关闭</string>
    <string name="dialog_gift_get_empty">礼包已被抢光</string>
    <string name="dialog_gift_get_failure">很遗憾，领取失败</string>
    <string name="dialog_gift_get_off_time">礼包已过期</string>
    <string name="domain_name">©2345.com</string>
    <string name="download_deleting">正在清空记录，请稍候…</string>
    <string name="download_remain_bytes">剩余%1$s%2$s</string>
    <string name="download_size_limited_alert">手机没有连接wifi，继续下载将使用数据流量；wifi自动下载将在手机连接wifi后不费流量自动下载</string>
    <string name="download_start">打开</string>
    <string name="drop_down_list_footer_default_text">更多</string>
    <string name="drop_down_list_footer_loading_text">加载中…</string>
    <string name="drop_down_list_footer_no_more_text">没有更多了</string>
    <string name="drop_down_list_header_default_text">点击可以刷新</string>
    <string name="drop_down_list_header_loading_text">加载中…</string>
    <string name="drop_down_list_header_pull_text">下拉可以刷新</string>
    <string name="drop_down_list_header_release_text">松开可以刷新</string>
    <string name="early_adopters">尝鲜</string>
    <string name="editaccout">请输入2345帐号</string>
    <string name="editcheckcode">请输入验证码</string>
    <string name="editpassword">请输入密码</string>
    <string name="editphonenumber">请输入手机号</string>
    <string name="editrightpassword">请输入6-16位新密码</string>
    <string name="editrightphonenumber">请输入正确的手机号</string>
    <string name="empty_introduction">更新内容：&lt;font color=#ababab>暂无更新说明&lt;/font></string>
    <string name="enable_sd_card">无可用SD卡，请插入或连接SD卡</string>
    <string name="expand">更多</string>
    <string name="fast_select_num">共%1$d款软件,已勾选&lt;font color=#6ccc7a>%2$d&lt;/font>款</string>
    <string name="fast_tv_footer_thank_support">&lt;font color=#9e9e9e>小编&lt;/font>&amp;#160;&amp;#160;&lt;font color=#000000>USERNAME&lt;/font>&amp;#160;&amp;#160;&lt;font color=#9e9e9e>整理和推荐&lt;/font></string>
    <string name="fast_tv_listview_footer_thank_support">小编 整理和推荐</string>
    <string name="fast_tv_title_union">热门应用一键安装</string>
    <string name="feedback_load_error_retry">加载失败，请点击重试</string>
    <string name="five_comments_one_day">评论失败，每天最多只能对此应用发表5条评论！</string>
    <string name="forced_stop">强制停止</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="free">免费试用</string>
    <string name="game_gift_title">游戏礼包</string>
    <string name="game_rank">游戏周榜</string>
    <string name="get_comments_failure">获取评论失败,请稍后重试</string>
    <string name="get_gift">抢礼包</string>
    <string name="get_gift_loading">领取中 , 请稍候…</string>
    <string name="getsmscode">获取验证码</string>
    <string name="gift">礼包</string>
    <string name="gift_code_copy">复制</string>
    <string name="gift_code_label">礼包码：</string>
    <string name="gift_detail">礼包详情</string>
    <string name="gift_user_empty">什么都没有，快去领礼包！</string>
    <string name="giftcenter">礼包中心</string>
    <string name="has_number_app_to_upgrade">&lt;font color=#ffa13d> %1$d &lt;/font> 个应用可更新</string>
    <string name="header_apk">无用安装包</string>
    <string name="header_cache">缓存垃圾</string>
    <string name="header_ram">内存加速</string>
    <string name="header_residual">卸载残留</string>
    <string name="hidden_sender_address">隐藏的发送者地址</string>
    <string name="hotgift">热门礼包 先兑先得</string>
    <string name="i_find">我发现</string>
    <string name="ignore_all_packages_under_this_path"><u>忽略此路径下的所有安装包</u></string>
    <string name="ignore_clear">忽略清理</string>
    <string name="image_content">Image</string>
    <string name="install_apps_count">共&lt;font color=#3097fd>%1$d&lt;/font>款应用，占用：%2$s</string>
    <string name="install_fail_file_not_exist">安装文件已不存在</string>
    <string name="install_manager">应用卸载</string>
    <string name="install_sys_apps_count">为安全起见，暂不提供卸载功能</string>
    <string name="item_based">道具收费</string>
    <string name="item_file_error">下载出错</string>
    <string name="item_net_error">网络异常</string>
    <string name="item_paused">已暂停</string>
    <string name="item_redirect_error">网络繁忙</string>
    <string name="item_retry">当前网络不佳，将自动重试</string>
    <string name="item_space_error">存储空间不足</string>
    <string name="junk_suggest_title">建议清理</string>
    <string name="kill_process_button">更多功能</string>
    <string name="kill_process_tip1">加速完成！</string>
    <string name="kill_process_tip2">体验更多精彩~</string>
    <string name="kill_process_toast">已清理后台软件%1$d个,释放内存%2$s,延长待机时间%3$d分钟</string>
    <string name="load_error_retry">加载失败，请稍后刷新！</string>
    <string name="managementfragment_kaijiqidong">开机启动优化</string>
    <string name="managementfragment_kaijiqidong_content">加快开机启动速度</string>
    <string name="managementfragment_qinglilaji">清理垃圾</string>
    <string name="managementfragment_qinglilaji_content">您已有&lt;font color=#ff8041>%1$d&lt;/font>天没有清理垃圾了</string>
    <string name="managementfragment_qinglilaji_content_size">上次清理：&lt;font color=#ff8041>%1$s &lt;/font></string>
    <string name="managementfragment_qinglilaji_speed">释放内存空间、手机提速</string>
    <string name="managementfragment_shoudaodewenjian">收到的文件</string>
    <string name="managementfragment_shoudaodewenjian_content">已收到电脑发来的&lt;font color=#ff8041>%1$d&lt;/font>个文件</string>
    <string name="managementfragment_uninstall">应用卸载</string>
    <string name="managementfragment_uninstall_content">已安装、系统预装应用</string>
    <string name="managementfragment_upgrade">应用升级</string>
    <string name="managementfragment_upgrade_content">有%d个应用可以升级</string>
    <string name="managementfragment_wenjianguanliqi">文件管理</string>
    <string name="managementfragment_wenjianguanliqi_content">管理图片、音乐、视频、文档</string>
    <string name="managent_frag_about">关于</string>
    <string name="mark">分</string>
    <string name="me">我</string>
    <string name="menu_feedback">留言板</string>
    <string name="messagelist_sender_self">我</string>
    <string name="mobile_cache_clear_info">"共&lt;font color='#ff683a'>%1$d&lt;/font>项缓存，清理可节省存储空间&lt;font color='#ff683a'>%2$s&lt;/font>"</string>
    <string name="mobile_clear">清理垃圾</string>
    <string name="mobile_clear_apk">安装包</string>
    <string name="mobile_clear_apk_all_clean_finish">没有安装包，高效率！</string>
    <string name="mobile_clear_apk_bad_apk_click_message">破损、老版本或已安装的apk无需覆盖安装,可以直接删除</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="signin">登录</string>
    <string name="useotheraccount">使用合作帐号登录</string>
    <string name="wifi_connected_files_check">" 查看来自电脑的文件"</string>
    <string name="wifi_connected_success">您的手机已成功连接到电脑</string>
    <string name="wifi_connected_success_actived">您现在可以把电脑里面的照片和视频放在手机上了</string>
    <string name="wifi_connected_success_title">已连接电脑</string>
    <string name="wifi_disconnect">断开连接</string>
</resources>