<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/account_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/titlebar_activityback" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/default_20dp">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/app_account_textbox_bg" android:layout_width="fill_parent" android:layout_height="45.0dip">
            <TextView android:textSize="@dimen/default_15dp" android:textColor="@color/account_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="11.0dip" android:text="@string/account" />
            <EditText android:textSize="@dimen/default_15dp" android:textColor="@color/account_text_color" android:textColorHint="@color/account_hint_text_color" android:id="@id/et_username" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="17.0dip" android:hint="@string/editphonenumber" android:singleLine="true" android:inputType="number" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:background="@drawable/app_account_textbox_bg" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="15.0dip">
            <TextView android:textSize="@dimen/default_15dp" android:textColor="@color/account_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="11.0dip" android:text="@string/password" />
            <EditText android:textSize="@dimen/default_15dp" android:textColor="@color/account_text_color" android:textColorHint="@color/account_hint_text_color" android:id="@id/et_pwd" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="17.0dip" android:hint="@string/editrightpassword" android:password="true" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="15.0dip">
            <EditText android:textSize="@dimen/default_15dp" android:textColor="@color/account_text_color" android:textColorHint="@color/account_hint_text_color" android:gravity="center" android:id="@id/et_code" android:background="@drawable/app_account_textbox_bg" android:layout_width="195.0dip" android:layout_height="fill_parent" android:hint="@string/editcheckcode" android:singleLine="true" />
            <Button android:textColor="@color/account_btn_text_color" android:id="@id/btn_get_code" android:background="@drawable/app_account_button_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/default_15dp" android:text="@string/getsmscode" />
        </LinearLayout>
        <Button android:enabled="false" android:textSize="17.0dip" android:textColor="@color/account_btn_text_color" android:id="@id/btn_register" android:background="@drawable/btnblue_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/register" />
    </LinearLayout>
</LinearLayout>