<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/account_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/titlebar_activityback" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="@dimen/default_20dp">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/app_account_textbox_bg" android:layout_width="fill_parent" android:layout_height="45.0dip">
            <TextView android:textSize="@dimen/default_15dp" android:textColor="@color/account_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="11.0dip" android:text="@string/account" />
            <EditText android:textSize="@dimen/default_15dp" android:textColor="@color/account_text_color" android:textColorHint="@color/account_hint_text_color" android:id="@id/et_username" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="17.0dip" android:hint="@string/editaccout" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:background="@drawable/app_account_textbox_bg" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="@dimen/default_15dp">
            <TextView android:textSize="@dimen/default_15dp" android:textColor="@color/account_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="11.0dip" android:text="@string/password" />
            <EditText android:textSize="@dimen/default_15dp" android:textColor="@color/account_text_color" android:textColorHint="@color/account_hint_text_color" android:id="@id/et_password" android:background="@null" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="17.0dip" android:hint="@string/editpassword" android:password="true" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/ll_checkcode" android:background="@color/account_bg_color" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="@dimen/default_15dp">
            <EditText android:textSize="@dimen/default_15dp" android:textColor="@color/account_text_color" android:textColorHint="@color/account_hint_text_color" android:gravity="center" android:id="@id/et_code" android:background="@drawable/app_account_textbox_normal" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/editcheckcode" android:singleLine="true" android:layout_weight="5.0" />
            <ImageView android:textColor="@color/account_btn_text_color" android:id="@id/iv_checkcode" android:background="@color/translucent_background" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/default_15dp" android:text="@string/getsmscode" android:layout_weight="3.0" />
        </LinearLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip">
            <TextView android:textSize="14.0dip" android:textColor="@color/account_textcolor_selector" android:id="@id/tv_forget_pwd" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forgetpassword" />
            <TextView android:textSize="14.0dip" android:textColor="@color/account_textcolor_selector" android:id="@id/tv_register" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register" android:layout_alignParentRight="true" />
        </RelativeLayout>
        <Button android:enabled="false" android:textSize="17.0dip" android:textColor="@color/account_btn_text_color" android:id="@id/btn_login" android:background="@drawable/btnblue_default" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/signin" />
        <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <View android:background="#ffd9d9d9" android:layout_width="0.0dip" android:layout_height="0.5dip" android:layout_weight="1.0" />
            <TextView android:textSize="14.0dip" android:textColor="#ff666666" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/default_8dp" android:layout_marginRight="@dimen/default_8dp" android:text="@string/useotheraccount" />
            <View android:background="#ffd9d9d9" android:layout_width="0.0dip" android:layout_height="0.5dip" android:layout_weight="1.0" />
        </LinearLayout>
        <ImageButton android:layout_gravity="center" android:id="@id/ib_qq_login" android:background="@drawable/app_account_qq_login_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_20dp" android:layout_marginBottom="168.0dip" />
    </LinearLayout>
</LinearLayout>