<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/default_blank" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/title_bar_layout" android:background="@color/main_blue_new" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageButton android:textColor="@android:color/white" android:id="@id/left_btn" android:background="@drawable/menu_back_selector" android:layout_centerVertical="true" android:onClick="back" style="@style/style_wrap_fill" />
        <TextView android:id="@id/page_title" android:paddingLeft="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_connected_success_title" android:layout_toRightOf="@id/left_btn" style="@style/DialogTitleStyle" />
        <TextView android:gravity="center" android:id="@id/wifi_disconnect" android:background="@drawable/wifi_disconnect" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_disconnect" android:layout_alignTop="@id/left_btn" android:layout_alignBottom="@id/left_btn" android:layout_alignParentRight="true" style="@style/DialogTitleStyle" />
    </RelativeLayout>
    <ScrollView android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="5.0dip" android:layout_below="@id/title_bar_layout">
        <LinearLayout android:orientation="vertical" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/wifi_connected_success_iv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="89.0dip" android:src="@drawable/wifi_connected_usb" />
            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:layout_gravity="center" android:id="@id/wifi_connected_success_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="35.0dip" android:text="@string/wifi_connected_success" android:drawableLeft="@drawable/wifi_conning_ok" android:drawablePadding="5.0dip" />
            <TextView android:textSize="14.0sp" android:textColor="#ffababab" android:gravity="center" android:layout_gravity="center" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/wifi_connected_success_actived" />
            <Button android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/wifi_connected_files_check" android:background="@drawable/file_management_bottom_delete_bg_selector" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="80.0dip" android:layout_marginRight="40.0dip" android:text="@string/wifi_connected_files_check" android:singleLine="true" android:maxLength="15" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>