<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:background="@color/default_blank" android:padding="5.0dip" android:scrollbars="none" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:splitMotionEvents="false">
        <RelativeLayout android:id="@id/relay_upgrade" android:background="@drawable/wonderfullistselector" android:paddingLeft="10.0dip" android:paddingTop="12.5dip" android:paddingBottom="12.5dip" android:layout_width="fill_parent" android:layout_height="75.0dip">
            <ImageView android:id="@id/image_upgrade" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginRight="15.0dip" android:src="@drawable/managementfrag_upgrade" android:layout_alignParentLeft="true" />
            <TextView android:textSize="17.0dip" android:textColor="@color/special_item_first" android:id="@id/text_upgrade_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/managementfragment_upgrade" android:singleLine="true" android:layout_toRightOf="@id/image_upgrade" />
            <TextView android:textSize="13.0dip" android:id="@id/text_upgrade_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/managementfragment_upgrade_content" android:singleLine="true" android:layout_toRightOf="@id/image_upgrade" android:layout_below="@id/text_upgrade_title" />
            <ImageView android:id="@id/image_upgrade_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/appstore_category_arrow_right" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/text_upgrade_count" android:background="@drawable/apps_count_num" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="23" android:layout_toLeftOf="@id/image_upgrade_arrow" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/relay_uninstall" android:background="@drawable/wonderfullistselector" android:paddingLeft="10.0dip" android:paddingTop="12.5dip" android:paddingBottom="12.5dip" android:layout_width="fill_parent" android:layout_height="75.0dip" android:layout_marginTop="5.0dip">
            <ImageView android:id="@id/image_uninstall" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginRight="15.0dip" android:src="@drawable/managementfrag_uninstall" android:layout_alignParentLeft="true" />
            <TextView android:textSize="17.0dip" android:textColor="@color/special_item_first" android:id="@id/text_uninstall_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/managementfragment_uninstall" android:singleLine="true" android:layout_toRightOf="@id/image_uninstall" />
            <TextView android:textSize="13.0dip" android:id="@id/text_uninstall_subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/managementfragment_uninstall_content" android:singleLine="true" android:layout_toRightOf="@id/image_uninstall" android:layout_below="@id/text_uninstall_title" />
            <ImageView android:id="@id/image_uninstall_arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/appstore_category_arrow_right" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/relay2" android:background="@drawable/wonderfullistselector" android:paddingLeft="10.0dip" android:paddingTop="12.5dip" android:paddingBottom="12.5dip" android:layout_width="fill_parent" android:layout_height="75.0dip" android:layout_marginTop="5.0dip">
            <ImageView android:id="@id/image3" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginRight="15.0dip" android:src="@drawable/managementfrag_filemanage" android:layout_alignParentLeft="true" />
            <TextView android:textSize="17.0dip" android:textColor="@color/special_item_first" android:id="@id/text4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/managementfragment_wenjianguanliqi" android:singleLine="true" android:layout_toRightOf="@id/image3" />
            <TextView android:textSize="13.0dip" android:textColor="@color/qr_result_vcard_title" android:id="@id/text5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/managementfragment_wenjianguanliqi_content" android:singleLine="true" android:layout_toRightOf="@id/image3" android:layout_below="@id/text4" />
            <ImageView android:id="@id/image4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/appstore_category_arrow_right" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/relay3" android:background="@drawable/wonderfullistselector" android:paddingLeft="10.0dip" android:paddingTop="12.5dip" android:paddingBottom="12.5dip" android:layout_width="fill_parent" android:layout_height="75.0dip" android:layout_marginTop="5.0dip">
            <ImageView android:id="@id/image5" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginRight="15.0dip" android:src="@drawable/managementfrag_startupmanage" android:layout_alignParentLeft="true" />
            <TextView android:textSize="17.0dip" android:textColor="@color/special_item_first" android:id="@id/text6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/managementfragment_kaijiqidong" android:singleLine="true" android:layout_toRightOf="@id/image5" />
            <TextView android:textSize="13.0dip" android:textColor="@color/qr_result_vcard_title" android:id="@id/text7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/managementfragment_kaijiqidong_content" android:singleLine="true" android:layout_toRightOf="@id/image5" android:layout_below="@id/text6" />
            <ImageView android:id="@id/image6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/appstore_category_arrow_right" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/relay4" android:background="@drawable/wonderfullistselector" android:paddingLeft="10.0dip" android:paddingTop="12.5dip" android:paddingBottom="12.5dip" android:layout_width="fill_parent" android:layout_height="75.0dip" android:layout_marginTop="5.0dip">
            <ImageView android:id="@id/image7" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginRight="15.0dip" android:src="@drawable/managementfrag_clean" android:layout_alignParentLeft="true" />
            <TextView android:textSize="17.0dip" android:textColor="@color/special_item_first" android:id="@id/text8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/managementfragment_qinglilaji" android:singleLine="true" android:layout_toRightOf="@id/image7" />
            <TextView android:textSize="13.0dip" android:textColor="@color/qr_result_vcard_title" android:id="@id/text9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/managementfragment_qinglilaji_speed" android:singleLine="true" android:layout_toRightOf="@id/image7" android:layout_below="@id/text8" />
            <ImageView android:id="@id/image8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/appstore_category_arrow_right" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/relay5" android:background="@drawable/wonderfullistselector" android:paddingLeft="10.0dip" android:paddingTop="12.5dip" android:paddingBottom="12.5dip" android:layout_width="fill_parent" android:layout_height="75.0dip" android:layout_marginTop="5.0dip">
            <ImageView android:id="@id/image9" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginRight="15.0dip" android:src="@drawable/managementfrag_receivefiles" android:layout_alignParentLeft="true" />
            <TextView android:textSize="17.0dip" android:textColor="@color/special_item_first" android:id="@id/text10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/managementfragment_shoudaodewenjian" android:singleLine="true" android:layout_toRightOf="@id/image9" />
            <TextView android:textSize="13.0dip" android:textColor="@color/qr_result_vcard_title" android:id="@id/text11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/managementfragment_shoudaodewenjian_content" android:singleLine="true" android:layout_toRightOf="@id/image9" android:layout_below="@id/text10" />
            <ImageView android:id="@id/image10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/appstore_category_arrow_right" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>